# my_rover_ws

./: frames_2025-07-17_08.18.03.gv  frames_2025-07-20_09.18.24.gv  frames_2025-07-20_09.23.59.gv  frames_2025-07-20_09.29.48.gv  frames_2025-07-20_09.32.56.gv  frames_2025-07-20_09.35.39.gv  frames_2025-07-20_10.12.27.gv  frames_2025-07-20_10.38.10.gv  frames_2025-07-20_10.56.21.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/joy_twist_bridge_pkg/share/joy_twist_bridge_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/joy_twist_bridge_pkg/share/joy_twist_bridge_pkg/launch/: joy.launch.py
install/lidar_safety_pkg/share/lidar_safety_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml
install/lidar_safety_pkg/share/lidar_safety_pkg/launch/: lidar_safety.launch.py
install/odometry_patcher_pkg/share/odometry_patcher_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/four_leds_control_pkg/: setup.cfg  setup.py
src/gps_navigator_pkg/: package.xml  setup.cfg  setup.py
src/gps_navigator_pkg/gps_navigator_pkg/: odom_echo.py  read_nav_external.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/joy_twist_bridge_pkg/: setup.cfg  setup.py
src/joy_twist_bridge_pkg/joy_twist_bridge_pkg/: joy_to_twist.py
src/keyboard_controller_pkg/: setup.py
src/lidar_safety_pkg/: setup.cfg  setup.py
src/lidar_safety_pkg/lidar_safety_pkg/: obstacle_detector_node.py
src/log/: latest_build
src/my_rover_launch_pkg/: package.xml.save  setup.cfg  setup.py
src/my_rover_launch_pkg/config/: ekf.yaml  ekf_gps.yaml  (+1 more)
src/odometry_patcher_pkg/: setup.cfg  setup.py
src/pan_tilt_control_pkg/: setup.cfg  setup.py
src/ps_serial_utils_pkg/: setup.cfg  setup.py
src/safety_interfaces/: CMakeLists.txt  package.xml
src/vertical_lidar_logger_pkg/: identify_esp32_ports.py  plot_lidar_csv.py  setup.cfg  setup.py
(+202 files in other folders)
