<?xml version="1.0"?>
<package format="3">
  <name>joy_twist_bridge_pkg</name>
  <version>0.0.0</version>
  <description>Bridge PS4 joystick input to cmd_vel using ps_ros2_common</description>
  <maintainer email="rover@todo.todo">rover</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ps_ros2_common</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
