<?xml version="1.0"?>
<package format="3">
  <name>odometry_patcher_pkg</name>
  <version>0.1.0</version>
  <description>Injects covariance into wheel odometry</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
